2001-03-01  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Robin Slomkowski <rslomkow@eazel.com>

	* gnome-vfs.spec.in:
	Attempt to fix tinderbox -- install the moved
	desktop file to the new location in the spec file
	too.

2001-03-01  Mike Fleming  <mfleming@eazel.com>

	reviewed by: <pavel@eazel.com>

	Bug 7192: split_toplevel_uri now allows URI's with a username
	but no hostname in the authority field.  In the future, we should
	figure out how to avoid having split_toplevel_uri involved with
	made-up URI schemes like eazel-install:

	* libgnomevfs/gnome-vfs-uri.c: (split_toplevel_uri):
	* test/test-uri.c: (main):

2001-03-01  Gene Z. Ragan  <gzr@eazel.com>

	reviewed by: Pavel Cisler  <pavel@eazel.com>
	
	* mime-type-capplet/Makefile.am:
	The capplet .desktop should be copied to the Documents
	directory of the control-center .desktop files directory,
	not the root level.

2001-02-28  Andy Hertzfeld  <andy@eazel.com>

	* data/mime/gnome-vfs.keys.in:
	fixed bug 7179, lots of text files are missing their embedded text;
	fixed by deleting the icon-filename entry for around a dozen types.
	
2001-02-28  Eric Fischer  <eric@eazel.com>

	reviewed by: Robin * Slomkowski <rslomkow@eazel.com>

	* gnome-vfs.spec.in:   (Bug 7166)
	Add dependency for control-center 1.2.3, because the mime-type
	capplet will crash without the latest version.  I think this can
	go away once the capplet gets moved into control-center where it
	belongs, but it's necessary for the moment.

2001-02-28  Darin Adler  <darin@eazel.com>

	Moved the ChangeLog entries into data/mime/ChangeLog.

2001-02-27  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Gene Z. Ragan  <gzr@eazel.com>

	* modules/file-method.c: (do_find_directory):
	Fix a bug where calling gnome_vfs_find_directory near
	a cross-file system symlink would return Trash corresponding
	to the link target not the link itself, causing an error when
	trying to delete the link.

2001-02-27  Josh Barrow  <josh@eazel.com>

	* AUTHORS: