@@ -393,7 +393,7 @@ omsomi
 
 gtv
 	command=gtv
-	name=smpeg gtv
+	name=GTK+ MPEG Player
 	can_open_multiple_files=false
 	expects_uris=false
 	requires_terminal=false
