@@ -1260,9 +1260,9 @@ video/mpeg
 	_description=MPEG video
 	icon_filename=gnome-video-mpeg.png
 	default_action_type=application
-	short_list_application_ids_for_novice_user_level=xmps,omsomi,mtvp,mtv,mpeg_play
-	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,mtvp,mtv,mpeg_play
-	short_list_application_ids_for_advanced_user_level=xmps,omsomi,mtvp,mtv,mpeg_play
+	short_list_application_ids_for_novice_user_level=xmps,omsomi,mtvp,mtv,mpeg_play,gtv
+	short_list_application_ids_for_intermediate_user_level=xmps,omsomi,mtvp,mtv,mpeg_play,gtv
+	short_list_application_ids_for_advanced_user_level=xmps,omsomi,mtvp,mtv,mpeg_play,gtv
 
 video/msvideo
 	_description=MS video
